--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
-    "python-envs.defaultEnvManager": "ms-python.python:system",
+    "python-envs.defaultEnvManager": "ms-python.python:conda",
     "python-envs.pythonProjects": [],
     "python.condaPath": "C:\\Users\\admin\\Miniconda3\\Scripts\\conda.exe",
     "python.defaultInterpreterPath": "C:\\Users\\admin\\Miniconda3\\python.exe",
     "python.terminal.activateEnvironment": true,
-    "terminal.integrated.shell.windows": "C:\\Windows\\System32\\cmd.exe"
+    "terminal.integrated.shell.windows": "C:\\Windows\\System32\\cmd.exe",
+    "python-envs.defaultPackageManager": "ms-python.python:conda"
 }
